Fix code : navStuck 공간만큼 화면 높이 조정

--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -17,7 +17,7 @@ body{
 
 .background{
     width: 100%;
-    height: 100vh;
+    height: 107vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -69,5 +69,7 @@ body{
     }
 
 }
+
+
 
 
